syntax = "proto3";

package com.vasquez.beer;

option java_package = "com.vasquez";
option java_outer_classname = "BeerProtos";
option java_multiple_files = true;

message Response {
    enum BeerCheckStatus {
        NOT_OK = 0;
        OK = 1;
    }

    string name = 1;
    BeerCheckStatus status = 2;
    int32 beersCount = 3;

    string city = 16;
    int64 dob =17;
}

message SomeCustomEnvelope {
    string message_type = 1;
    bytes event_data = 2;
}
